# gemini-system

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: README.md  (+25 more)
modules/: CMakeLists.txt
modules/gemini-basic/: BasicModule.cpp  CMakeLists.txt
modules/gemini-cobol/: CMakeLists.txt  CobolModule.cpp
modules/gemini-comal/: CMakeLists.txt  ComalModule.cpp
modules/gemini-pascal/: CMakeLists.txt  PascalModule.cpp
modules/gemini-stub/: CMakeLists.txt  StubModule.cpp
packaging/: CMakeLists.txt
packaging/gemini/: daemon.conf  daemon.conf.example
packaging/systemd/: gemini.service.in
src/: CMakeLists.txt  Main.cpp
src/console/: Main.cpp
src/core/: CMakeLists.txt
src/core/boot/: BootMonitor.cpp  BootMonitor.h
src/core/catalog/: GeminiCatalog.cpp  GeminiCatalog.h
src/core/cli/: Main.cpp  main.cpp
src/core/conversion/: PickIconv.cpp  PickIconv.h  PickOconv.cpp  PickOconv.h
src/core/daemon/: ConsoleConfig.cpp  ConsoleConfig.h  CooperativeSessionRunner.cpp  CooperativeSessionRunner.h  DaemonConfig.cpp  DaemonConfig.h  DaemonIpcClient.cpp  DaemonIpcClient.h  DaemonIpcProtocol.cpp  DaemonIpcProtocol.h  DaemonIpcServer.cpp  DaemonIpcServer.h  GeminiServiceDaemon.cpp  GeminiServiceDaemon.h  IpcSessionChannel.cpp  IpcSessionChannel.h  PortManager.cpp  PortManager.h  SerialSessionRunner.cpp  SerialSessionRunner.h
src/core/english/: DictItemClassifier.cpp  DictItemClassifier.h  DictionaryResolver.cpp  DictionaryResolver.h  EnglishParser.cpp  EnglishParser.h  EnglishService.cpp  EnglishService.h  EnglishTypes.h  Executor.cpp  Executor.h  Formatter.cpp  Formatter.h  FormatterDateTime.cpp  FormatterDateTime.h  Planner.h
src/core/english/correlatives/: CorrelativeEvaluator.cpp  CorrelativeEvaluator.h  DictFItemParser.cpp  DictFItemParser.h  DictIItemParser.cpp  DictIItemParser.h  FCorrelativeDef.h  ICorrelativeDef.h  IExpressionAst.cpp  IExpressionAst.h  IExpressionEvaluator.cpp  IExpressionEvaluator.h  IExpressionParser.cpp  IExpressionParser.h
src/core/filesystem/: Catalog.cpp  Catalog.h  FileSystem.cpp  FileSystem.h  Record.cpp  Record.h  RecordAttribute.cpp  RecordAttribute.h  StructuredRecord.cpp  StructuredRecord.h
src/core/host/: HostBootstrap.cpp  HostBootstrap.h
src/core/languages/: LanguageModuleAbi.h  LanguageModuleBootLog.cpp  LanguageModuleBootLog.h  LanguageModuleLoader.cpp  LanguageModuleLoader.h  LanguageRegistry.cpp  LanguageRegistry.h  LanguageRegistryFormat.cpp  LanguageRegistryFormat.h  LanguageTypes.h
src/core/languages/basic/: BasicBuiltinHandlers.cpp  BasicBuiltinHandlers.h  (+8 more)
src/core/locking/: LockRegistry.cpp  LockRegistry.h  LockTable.cpp  LockTable.h  LockTypes.h
src/core/login/: LoginService.cpp  LoginService.h  UserSession.h
src/core/md/: MdDefaultDataFile.cpp  MdDefaultDataFile.h
src/core/vm/: BytecodeText.cpp  BytecodeText.h  InstructionPrint.cpp  InstructionPrint.h  Instructions.cpp  Instructions.h  Parser.cpp  Parser.h  Runtime.cpp  Runtime.h  VM.cpp  VM.h
src/core/voc/: VocResolver.cpp  VocResolver.h
src/daemon/: Main.cpp
src/tcl/: Shell.cpp  Shell.h  tcl.cpp  tcl.h
src/userland/: CMakeLists.txt
src/userland/assembler/: AssemblerShell.cpp  AssemblerShell.h  VmDebugService.cpp  VmDebugService.h
src/userland/basic/: BasicAst.h  BasicBuiltinNames.h  BasicBytecodeEmitter.cpp  BasicBytecodeEmitter.h  BasicCompileUtils.cpp  BasicCompileUtils.h  BasicCompiler.cpp  BasicCompiler.h  BasicExpressionParser.cpp  BasicExpressionParser.h  BasicNormalizedIr.h  BasicProgram.cpp  BasicProgram.h  BasicSemanticAnalyzer.cpp  BasicSemanticAnalyzer.h  BasicShell.cpp  BasicShell.h  BasicStatementParser.cpp  BasicStatementParser.h
src/userland/cli/: Main.cpp
src/userland/proc/: ProcInterpreter.cpp  ProcInterpreter.h
src/userland/tcl/: AdminQueries.h  DefaultFileSystemRoot.cpp  DefaultFileSystemRoot.h  GeminiCatalog.cpp  GeminiCatalog.h  GeminiDaemonRunner.cpp  GeminiDaemonRunner.h  GeminiSession.cpp  GeminiSession.h  GeminiSessionHost.cpp  GeminiSessionHost.h  HelpTopics.cpp  HelpTopics.h  LineRecordEditor.cpp  LineRecordEditor.h  SessionTable.cpp  SessionTable.h  Shell.cpp  Shell.h  ShellAuth.cpp  ShellSession.cpp  ShellSession.h  TclEnvironment.cpp  TclEnvironment.h  VocResolver.cpp  VocResolver.h
src/vm/: Main.cpp
tests/: CMakeLists.txt  ShellTestFsUtil.h  TestProcessReset.cpp  TestProcessReset.h  test_BasicBytecodeEmitter.cpp  test_BasicCompiler.cpp  test_BasicCompilerGolden.cpp  test_BasicExpressionParser.cpp  test_BasicSemanticAnalyzer.cpp  test_BasicStatementParser.cpp  test_BootMonitor.cpp  test_LoginService.cpp  test_Parser.cpp  test_Runtime.cpp  test_Shell.cpp  test_TclEnvironment.cpp  test_VocResolver.cpp  test_pick_core.cpp  test_shell.cpp
tests/basic/: test_BasicBytecodeEmitter.cpp  test_BasicCompiler.cpp  test_BasicCompilerGolden.cpp  test_BasicExpressionParser.cpp  test_BasicSemanticAnalyzer.cpp  test_BasicStatementParser.cpp
tests/console/: test_GeminiConsole.cpp
tests/core/: BasicLanguageTestFixture.h  DaemonIpcTestUtil.h  TestLanguageNamespace.h  test_BootMonitor.cpp  test_CallFunc.cpp  test_CooperativeSessionRunner.cpp  test_CorrelativeEvaluator.cpp  test_DaemonConfig.cpp  test_DaemonIpc.cpp  test_DaemonIpcSession.cpp  test_DaemonLifecycle.cpp  test_English.cpp  test_EnglishFormatter.cpp  test_FileSystem.cpp  test_FileSystemLocking.cpp  test_GeminiDaemon.cpp  test_InstallComponents.cpp  test_LanguageAbi.cpp  test_LanguageModuleLoader.cpp  test_LanguageRegistry.cpp  test_LanguageRegistryFormat.cpp  test_LockTable.cpp  test_LoginService.cpp  test_MdDefaultDataFile.cpp  test_Parser.cpp  test_PickIconv.cpp  test_PickOconv.cpp  test_PortManager.cpp  test_Runtime.cpp  test_SchedulableSessionIo.cpp  test_SessionIoBridge.cpp  test_SessionTable.cpp  test_StandaloneVm.cpp  test_SystemdPackaging.cpp  test_VocResolver.cpp
tests/proc/: test_ProcLocking.cpp  test_ProcShell.cpp
tests/tcl/: test_AdminCommands.cpp  test_AssemblerShell.cpp  test_GeminiSession.cpp  test_GeminiSessionLocks.cpp  test_M10CrossShell.cpp  test_Shell.cpp  test_ShellLocking.cpp  test_ShellSessionLocks.cpp  test_TclEnvironment.cpp
(+58 files in other folders)
